Refac: 데이터에 맞춰 기능 리팩토링 완료 (#97)